# Blender-D20

./: .gitignore  BATCH_RENDER_GUIDE.md  CLAUDE.md  Makefile  Notes from Sage.txt  ONBOARDING.md  README.md  __init__.py  banner.py  banner_audio.py  batch_render.py  check-json-change.sh  config.py  config_dark_green_d20.json  config_dramatic_blue_yellow.json  config_dramatic_lighting.json  config_extreme_black_neon.json  config_extreme_cyan_red.json  config_extreme_magenta_green.json  config_extreme_pure_blue_yellow.json  config_extreme_pure_green_magenta.json  config_extreme_pure_red_cyan.json  config_extreme_single_red_light.json  config_extreme_split_cyan_orange.json  config_extreme_triple_saturation.json  config_extreme_white_neon.json  config_high_angle.json  config_large_green.json  config_low_angle_dramatic.json  config_outcome_03.json  config_outcome_04.json  config_outcome_05.json  config_outcome_06.json  config_outcome_07.json  config_outcome_08.json  config_outcome_09.json  config_outcome_10.json  config_outcome_11.json  config_outcome_12.json  config_outcome_13.json  (+21 more)
.d20_cache/: physics.cache_key
d20_renderer/: banner.py  banner_audio.py  cache.py  config.py  die.py  log.py  physics.py  pipeline.py  render.py  run.py  scene.py
examples/: README.md  crit_hit.json  minimal.json  preview.json  transparent_green.json  transparent_green.json.prev  transparent_green_decal.json  transparent_green_table.json  transparent_red.json  transparent_resin.json
previews/: d20_roll_14.mp4.cache_key  d20_roll_20.png.cache_key
renders_final/: d20_roll_01.mp4.cache_key  (+2 more)
(+8 files in other folders)
